update API