@@ -12,6 +12,7 @@ import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
@@ -24,11 +25,15 @@ public class NotificationService {
     private final NotificationMapper notificationMapper;
 
     // 특정 유저의 알림 목록 조회
-    public List<String> getNotificationsForUser(Long userId) {
+    public List<NotificationDTO> getNotificationsForUser(Long userId) {
         return notificationRepository.findByUserIdOrderByCreateDateDesc(userId)
                 .stream()
-                .map(Notification::getMessage) // 메시지만 가져오기
-                .collect(Collectors.toList());
+                .map(notification -> new NotificationDTO(
+                        notification.getId(),
+                        notification.getMessage(),
+                        notification.isRead()
+                ))
+                .toList();
     }
 
     // 새로운 알림 저장
@@ -63,5 +68,28 @@ public class NotificationService {
         emitter.onTimeout(() -> emitters.remove(userId));
 
         return emitter;
+    }
+
+    // ✅ 알림을 읽음 상태로 변경하는 기능
+    @Transactional
+    public void markAsRead(NotificationDTO notificationDTO) {
+        Optional<Notification> optionalNotification = notificationRepository.findById(notificationDTO.getId());
+
+        optionalNotification.ifPresent(notification -> {
+            // ✅ 읽음 상태 변경 (Setter 없이 Dirty Checking 활용)
+            notification.markAsRead();
+        });
+//        optionalNotification.ifPresent(notification -> {
+//            // ✅ DTO에서 isRead 값을 가져와 엔티티를 업데이트
+//            Notification updatedNotification = Notification.builder()
+//                    .id(notification.getId())
+//                    .user(notification.getUser())
+//                    .message(notification.getMessage())
+//                    .isRead(notificationDTO.isRead()) // ✅ DTO 값을 적용
+//                    .createDate(notification.getCreateDate())
+//                    .build();
+//
+//            notificationRepository.save(updatedNotification); // ✅ 변경된 엔티티 저장
+//        });
     }
 }
